# Stellaris-QED-Engine

./: 1. Installation  2. Basic Usage.py  2.Run validation on your QED engine.sh  ACADEMIC_LICENSE  CITATION.cff  COMMERCIAL_LICENSE  CONFIGURATION FILE.yaml  Dark Photon Conversion and Vacuum-Gradient Thrust.docx  Data Analysis Suite.py  EXECUTION COMMANDS  INSTALLATION & USAGE 1. Install the package:.sh  LAB BUILD INSTRUCTIONS..txt  LICENSE  LICENSE-APACHE  Makefile  Package 1: Mathematical Foundations.py  Package 2: Cross-Domain Test Battery.py  Package 3: Benchmark Comparisons.py  QUICK START COMMANDS  QUICK VALIDATION MODULE.py  Quantum Vacuum Monitor.py  README.md  RUN IT NOW  Source Code Header Template.py  Stellaris_Paper.docx  VALIDATION SCRIPT.py  create_animation.py  create_dashboard.py  main.tex  pyproject.toml  python main.py  qed_validator.py  quantum_secure_dark_net_expanded_deliverables_notebook_literature_security.py  references.bib  required libraries  root  run  run.sh  run_closed_loop_fixed.py  run_closed_loop_simulation.py  (+8 more)
.github/workflows/: license-check.yml
Separate compute from I/: O
environments/: magnetar.py
physics/: euler_heisenberg.py
scripts/: setup_licensing.py
solvers/: base_solver.py  qed_field_solver.py
tests/: test_qed_magnetar.py
utils/: performance.py
